# shoshin

./: .gitignore  .gitmodules  Makefile
8-zed/: protostar.toml
8-zed/cairo/: combo.cairo  dynamics.cairo  engine.cairo  engine_main.cairo  numerics.cairo  perceptibles.cairo  physics.cairo  utils.cairo
8-zed/cairo/body/: body.cairo  body_antoc.cairo  body_jessica.cairo
8-zed/cairo/constants/: constants.cairo  constants_antoc.cairo  constants_jessica.cairo
8-zed/cairo_test/: combo.cairo  perceptibles.cairo  utils.cairo
8-zed/cairo_test/body/: body_utils.cairo
8-zed/cairo_test/constants/: constants_antoc.cairo
8-zed/cairo_test/lib/: constants.cairo
8-zed/cinematics/: production.py
8-zed/contracts/: combo.cairo  dynamics.cairo  engine.cairo  perceptibles.cairo  physics.cairo  utils.cairo
8-zed/contracts/body/: body.cairo  body_antoc.cairo  body_jessica.cairo  body_projectile.cairo  body_utils.cairo
8-zed/contracts/constants/: constants.cairo  constants_antoc.cairo  constants_jessica.cairo  constants_projectile.cairo
8-zed/tests/: test_engine.py  utils.py
8-zed/tests/body/: test_body_utils.cairo
8-zed/tests/dynamics/: test_dynamics.cairo
8-zed/tests/simulation/: test_profiling.cairo
bto_cairo_1/: .gitignore  README.md
bto_cairo_1/lib/: constants.cairo  lib.cairo  math.cairo  tests.cairo  tree.cairo  types.cairo
circom/: README.md  architecture.md  package-lock.json  package.json
circom/circuits/: FDEmulator.circom  FDStep.circom  FDWrapper.circom  Operators.circom
circom/circuits/__tests__/: compile_tests.sh  fd_emulator.spec.ts  fd_emulator_compiled_fd.spec.ts  fd_wrapper.spec.ts  test.spec.ts
circom/hardhat/deploy/: deploy.js
circom/src/: fd_merkle_tree.ts  fd_proof_artifact_gen.ts  ts_evaluator.ts  types.ts  utils.ts
circom/src/compile/: json_compiler.ts
circom/ts/: package-lock.json
circom/ts/circuits/: FDVM.circom
docs/: _sidebar.md  index.html  overview-why.md
docs/appendix/: agent.md
docs/concepts/: mbs.md  mind.md  physics.md  playable-character.md  stimulus.md
docs/dbo/: proposal.md
docs/overview/: introduction.md
scripts/: README.md  build_lib.sh  compile_cairo.sh  compile_lib.sh  deploy.sh  gencairo.py
shoshin/: .gitignore  .gitmodules  Makefile  README.md  compiled_bto.json  perception.md  vm.md
shoshin/1-lonely/contracts/: constants.cairo  engine.cairo  object.cairo
shoshin/2-bully/artifacts/: test_engine.json
shoshin/2-bully/cinematics/: production.py
shoshin/2-bully/contracts/: constants.cairo  engine.cairo  (+2 more)
shoshin/8-zed/: protostar.toml  pytest.ini
shoshin/circom/: README.md  package-lock.json  package.json  tsconfig.json
shoshin/docs/: _sidebar.md  concept-summary.md  double-blinding-proposal.md  index.html
shoshin/scripts/: build_lib.sh  compile_cairo.sh  deploy.sh  gencairo.py  genlib.py
shoshin/tests/: test_engine.py
tooling/: .gitignore  .mocharc.json  .prettierrc  Makefile  README.md  netlify.toml  package-lock.json  package.json  tsconfig.json  tsconfig.testing.json
tooling/lib/: api.js  api.ts  mongodb.js
tooling/pages/: _app.js  _document.tsx  index.tsx
tooling/server/: README.md  package-lock.json  package.json  tsconfig.json
tooling/server2/: package-lock.json  package.json  tsconfig.json
tooling/styles/: Home.module.css  StatusBar.module.css  globals.css
tooling/test/: function.test.ts  leaf.test.ts
tooling/wasm/: .gitignore  Cargo.toml
tooling/wasm/cairo_derive/: Cargo.toml
tooling/wasm/cairo_derive/src/: lib.rs
tooling/wasm/cairo_execution/: Cargo.toml
tooling/wasm/cairo_execution/src/: constants.rs  lib.rs  utils.rs
tooling/wasm/cairo_types/: Cargo.toml
tooling/wasm/cairo_types/src/: lib.rs  traits.rs  types.rs
tooling/wasm/condition_eval/: Cargo.toml
tooling/wasm/condition_eval/src/: bytecode_condition.json  lib.rs  types.rs
tooling/wasm/shoshin/: Cargo.toml
tooling/wasm/shoshin/src/: lib.rs  types.rs  utils.rs
tooling/wasm/shoshin/src/types/: mod.rs  realtime.rs  simulation.rs
tooling/wasm/shoshin_derive/: Cargo.toml
tooling/wasm/shoshin_derive/src/: lib.rs
tooling/wasm/src/: lib.rs  types.rs
tooling_backend/: Dockerfile  README.md  docker-compose.prod.yml  pyproject.toml
tooling_backend/docs/: pull_request_template.md
(+475 files in other folders)
