[package]
name = "condition_eval"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
cairo-vm = {git = "https://github.com/lambdaclass/cairo-rs.git", default-features = false, rev = "abaf215" }
cairo-felt = {git = "https://github.com/lambdaclass/cairo-rs.git", default-features = false, rev = "abaf215" }

serde_json = "1.0.87"
wasm-bindgen = "0.2.83"
anyhow = "1.0.68"
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2.15"
serde-wasm-bindgen = "0.4"

cairo_execution = { path = "../cairo_execution" }
cairo_derive = { path = "../cairo_derive" }
cairo_types = { path = "../cairo_types" }
serde = "1.0.159"
